[package]
name = "ly"
version = "0.1.0"
authors = ["utky <ilyaletre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.3"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "2.33.3"
rusqlite = { version = "0.24.2", features = ["chrono"] }
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.5"
uuid = { version = "0.8.1", features = ["v4"] }
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.61"
