[package]
name = "ly"
version = "0.1.4"
authors = ["utky <ilyaletre@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.0.14", features = ["derive"] }
rusqlite = { version = "0.27.0", features = ["chrono"] }
tokio = { version = "1.18.1", features = ["full"] }
actix-web = "4"
uuid = { version = "1.0.0", features = ["v4"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
http = "^0.2"
log = "0.4.17"
env_logger = "0.9.0"
